--- a/SteppingStones/pom.xml
+++ b/SteppingStones/pom.xml
@@ -21,11 +21,16 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
-            <dependency>
-                <groupId>com.google.firebase</groupId>
-                <artifactId>firebase-admin</artifactId>
-                <version>6.2.0</version>
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>6.2.0</version>
             </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
 
     </dependencies>
 
