--- a/SteppingStones/pom.xml
+++ b/SteppingStones/pom.xml
@@ -42,7 +42,11 @@
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.twilio.sdk</groupId>
+            <artifactId>twilio</artifactId>
+            <version>7.23.0</version>
+        </dependency>
     </dependencies>
 
     <build>
