Add Retrieve Schedule nackend functionality

--- a/SteppingStones/src/main/webapp/WEB-INF/web.xml
+++ b/SteppingStones/src/main/webapp/WEB-INF/web.xml
@@ -37,4 +37,13 @@
         <servlet-name>DashboardServlet</servlet-name>
         <url-pattern>/DashboardServlet</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>RetrieveScheduleServlet</servlet-name> 
+        <servlet-class>controller.RetrieveScheduleServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>RetrieveScheduleServlet</servlet-name>
+        <url-pattern>/RetrieveScheduleServlet</url-pattern>
+    </servlet-mapping>
 </web-app>
