--- a/SteppingStones/src/main/webapp/WEB-INF/web.xml
+++ b/SteppingStones/src/main/webapp/WEB-INF/web.xml
@@ -1,47 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-	 version="3.1">
+<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
     <servlet>
-        <servlet-name>RetrieveScheduleCreationDetails</servlet-name> 
+        <servlet-name>RetrieveScheduleCreationDetails</servlet-name>
         <servlet-class>controller.RetrieveScheduleCreationDetailsServlet</servlet-class>
     </servlet>
-
     <servlet-mapping>
         <servlet-name>RetrieveScheduleCreationDetails</servlet-name>
         <url-pattern>/RetrieveScheduleCreationDetails</url-pattern>
     </servlet-mapping>
     <servlet>
-        <servlet-name>ScheduleCreationServlet</servlet-name> 
+        <servlet-name>ScheduleCreationServlet</servlet-name>
         <servlet-class>controller.ScheduleCreationServlet</servlet-class>
     </servlet>
-
     <servlet-mapping>
         <servlet-name>ScheduleCreationServlet</servlet-name>
         <url-pattern>/ScheduleCreationServlet</url-pattern>
     </servlet-mapping>
-    
     <servlet>
-        <servlet-name>DashboardServlet</servlet-name> 
-        <servlet-class>controller.DashboardServlet</servlet-class>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>DashboardServlet</servlet-name>
-        <url-pattern>/DashboardServlet</url-pattern>
-    </servlet-mapping>
-    <servlet>
-        <servlet-name>RetrieveScheduleServlet</servlet-name> 
+        <servlet-name>RetrieveScheduleServlet</servlet-name>
         <servlet-class>controller.RetrieveScheduleServlet</servlet-class>
     </servlet>
-
     <servlet-mapping>
         <servlet-name>RetrieveScheduleServlet</servlet-name>
         <url-pattern>/RetrieveScheduleServlet</url-pattern>
