--- a/SteppingStones/pom.xml
+++ b/SteppingStones/pom.xml
@@ -25,6 +25,11 @@
             <groupId>javax.mail</groupId>
             <artifactId>mail</artifactId>
             <version>1.4.1</version>
+        </dependency>  
+        <dependency>
+            <groupId>com.sendgrid</groupId>
+            <artifactId>sendgrid-java</artifactId>
+            <version>4.2.1</version>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
