--- a/SteppingStones/pom.xml
+++ b/SteppingStones/pom.xml
@@ -52,6 +52,11 @@
             <artifactId>twilio</artifactId>
             <version>7.23.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.17</version>
+        </dependency>
     </dependencies>
 
     <build>
