Late payment scheduler and test job for final presentation

--- a/SteppingStones/src/main/webapp/WEB-INF/web.xml
+++ b/SteppingStones/src/main/webapp/WEB-INF/web.xml
@@ -32,4 +32,10 @@
     <listener>
         <listener-class>JobScheduler.PaymentReminderScheduler</listener-class>
     </listener>
+    <listener>
+        <listener-class>JobScheduler.LatePaymentReminderScheduler</listener-class>
+    </listener>
+    <listener>
+        <listener-class>JobScheduler.TestScheduler</listener-class>
+    </listener>
 </web-app>
